# engineering_thesis_django

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  config.env  default_config.env  pyproject.toml  script.sh
.github/workflows/: ci.yml
logging_system/: Dockerfile  asgi.py  celery.py  functions.py  manage.py  requirements.txt  script.sh  settings.py  urls.py  wsgi.py
logging_system/audit_log/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
logging_system/config/: admin.py  apps.py  email.py  forms.py  models.py  urls.py  views.py
logging_system/devices/: forms.py  models.py  urls.py  views.py
logging_system/home/: apps.py  forms.py  functions.py  ml.py  tasks.py  urls.py  views.py
logging_system/incidents/: admin.py  apps.py  forms.py  functions.py  models.py  tests.py  urls.py  views.py
logging_system/locations/: apps.py  forms.py  functions.py  models.py  tests.py  urls.py  views.py
logging_system/logging_system/: functions.py  settings.py  urls.py
logging_system/logs/: apps.py  forms.py  functions.py  ml.py  models.py  tasks.py  urls.py  views.py
logging_system/services/: forms.py  models.py  urls.py  views.py
logging_system/systems/: admin.py  apps.py  forms.py  functions.py  models.py  tasks.py  tests.py  urls.py  views.py
logging_system/templates/: add_location.html  edit_system.html  elements.html  home.html  incidents.html  locations.html  logs.html  navbar.html  register.html  system.html  systems.html
syslog-ng/: Dockerfile  create_log.sql  delay.sh  syslog-ng.conf
webapp/: requirements.txt  script.sh
(+115 files in other folders)
