[project]
name = "logging-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "django>=5.2.10",
    "django-celery-beat>=2.8.1",
    "django-stubs>=5.2.9",
    "joblib>=1.5.3",
    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.5.0",
    "mysqlclient>=2.2.7",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "ping3>=5.1.5",
    "plotly>=6.5.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sklearn-minisom>=0.0.3",
]
